# unsloppable

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
eval/: analyze.py  compare_sources.py  evaluate.py  fetch_hc3.py  fetch_raid.py  generate.py  llm.py  score_likelihood.py  train_combiner.py
examples/: agent_selfcheck.py
tests/: test_core.py
unsloppable/: __init__.py  cli.py  combine.py  combiner.json  config.py  features.py  heuristic.py  likelihood.py  text.py  types.py
